--- a/manifests-local/config-shopping.yaml
+++ b/manifests-local/config-shopping.yaml
@@ -3,6 +3,9 @@ kind: ConfigMap
 metadata:
   name: coffeeshop-shopping-config
 data:
+  DB_HOST: host.minikube.internal
+  DB_PORT: "5432"
+  DB_DBNAME: <database_shopping>
   API_CUSTOMER_URL: http://eks-demo-coffeeshop-customer-svc.default.svc.cluster.local:4000
 ---
 apiVersion: v1
@@ -13,6 +16,3 @@ type: Opaque
 stringData:
   DB_USERNAME: <username>
   DB_PASSWORD: <password>
-  DB_HOST: host.minikube.internal
-  DB_PORT: "5432"
-  DB_DBNAME: <database_customer>
