--- a/manifests-local/deploy-customer.yaml
+++ b/manifests-local/deploy-customer.yaml
@@ -59,3 +59,5 @@ spec:
                 secretKeyRef:
                   name: coffeeshop-token-secret
                   key: JWT_REFRESH_SECRET
+            - name: NODE_ENV
+              value: development
