--- a/manifests-local/ingress.yaml
+++ b/manifests-local/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: coffeeshop-ingress-frontend
+  name: coffeeshop-ingress
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "false"
 spec:
