--- a/manifests-local/istio/deploy-shopping-v1.yaml
+++ b/manifests-local/istio/deploy-shopping-v1.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: coffeeshop-shopping-deploy
+  name: coffeeshop-shopping-deploy-v1
   labels:
     app: coffeeshop-shopping
 spec:
@@ -9,14 +9,16 @@ spec:
   selector:
     matchLabels:
       app: coffeeshop-shopping
+      version: v1
   template:
     metadata:
       labels:
         app: coffeeshop-shopping
+        version: v1
     spec:
       containers:
         - name: eks-demo-coffeeshop-shopping
-          image: mortredn/eks-demo-coffeeshop-shopping:latest
+          image: mortredn/eks-demo-coffeeshop-shopping:1.1-no-migration
           resources:
             limits:
               cpu: "250m"
