--- a/terraform-aws/.gitignore
+++ b/terraform-aws/.gitignore
@@ -30,8 +30,8 @@ override.tf.json
 # !example_override.tf
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-*tfplan*
-*tf.plan*
+*tf*plan*
+*tf*.plan*
 
 # Ignore CLI configuration files
 .terraformrc
